added update for working example with sending args within fragments

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,12 +44,17 @@
         android:id="@+id/confirmationFragment"
         android:name="com.relsellglobal.kotlinnavigationexample.ConfirmationFragment"
         android:label="fragment_confirmation"
-        tools:layout="@layout/fragment_confirmation" />
+        tools:layout="@layout/fragment_confirmation" >
+        <argument android:name="recipient" android:defaultValue="None" />
+        <argument android:name="amount" app:argType="com.relsellglobal.kotlinnavigationexample.Money" />
+
+    </fragment>
     <fragment
         android:id="@+id/specifyAmountFragment"
         android:name="com.relsellglobal.kotlinnavigationexample.SpecifyAmountFragment"
         android:label="fragment_specify_amount"
         tools:layout="@layout/fragment_specify_amount" >
+        <argument android:name="recipient" android:defaultValue="None" />
         <action
             android:id="@+id/action_specifyAmountFragment_to_confirmationFragment"
             app:destination="@id/confirmationFragment"
